# VMCE

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: application.hpp  singleton.hpp  vmce.hpp
include/inl/: application.inl  singleton.inl
src/: application.cpp  main.cpp
tests/: CMakeLists.txt
